Upgrade Java version and dependencies version