@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>31.1-jre</version>
+            <version>33.5.0-jre</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -85,15 +85,13 @@
 
 
     <properties>
-        <maven.compiler.version>3.10.1</maven.compiler.version>
-        <java.version>19</java.version>
-        <maven.compiler.target>19</maven.compiler.target>
-        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.version>3.14.1</maven.compiler.version>
+        <java.version>25</java.version>
+        <maven.compiler.target>25</maven.compiler.target>
+        <maven.compiler.source>25</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <errorprone.version>2.14.0</errorprone.version>
+        <errorprone.version>2.45.0</errorprone.version>
         <argLine>
-            --add-modules
-            jdk.incubator.concurrent
             --add-exports
             jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
             --add-exports
@@ -145,8 +143,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.incubator.concurrent</arg>
+                        <arg>--enable-preview</arg>
                         <arg>--add-exports</arg>
                         <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>--add-exports</arg>
